--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="submit">
+		<label for="name">Name</label>
+        <input type="text" id="name" placeholder="name">
+
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" placeholder="Phone Number">
+
+        <label for="address">Address</label>
+        <input type="text" id="address" placeholder="Address">
+
+        <input type="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select name="" id="multiSelect">
+            <option >German Shepherd</option>
+            <option >Bull Dog</option>
+            <option >chow chow</option>
+        </select>
+        
+        <input type="submit" name="submit" id="submit" value="Submit">
+
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
