--- a/main.html
+++ b/main.html
@@ -18,16 +18,16 @@
         <label for="address">Address</label>
         <input type="text" id="address" placeholder="Address">
 
-        <input type="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">
-        <label for="checkbox">Have you ever lived with a Dog before?</label>
-
-        <label for="multiSelect">Please select your preferred breeds</label>
-        <select name="" id="multiSelect">
+        <label for="checkbox">
+	        <input type="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+		</label>
+        <label for="multiSelect">Please select your preferred breeds
+        <select name="" id="multiSelect" >
             <option >German Shepherd</option>
             <option >Bull Dog</option>
             <option >chow chow</option>
         </select>
-        
+        </label>
         <input type="submit" name="submit" id="submit" value="Submit">
 
 	</form>
