--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="form-container">
 	<form action="submit">
+		<h2>Dog Adoption Application</h2>
 		<label for="name">Name</label>
         <input type="text" id="name" placeholder="name">
 
@@ -28,9 +30,10 @@
             <option >chow chow</option>
         </select>
         </label>
-        <input type="submit" name="submit" id="submit" value="Submit">
+        <input type="submit" name="submit" id="submit" value="Submit" class="submit-btn">
 
 	</form>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
