--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 	        <input type="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 		</label>
         <label for="multiSelect">Please select your preferred breeds
-        <select name="" id="multiSelect" >
+        <select name="" id="multiSelect" multiple >
             <option >German Shepherd</option>
             <option >Bull Dog</option>
             <option >chow chow</option>
