--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<form action="submit">
 		<h2>Dog Adoption Application</h2>
 		<label for="name">Name</label>
-        <input type="text" id="name" placeholder="name">
+        <input type="text" id="name" placeholder="Name">
 
         <label for="phone">Phone Number</label>
         <input type="text" id="phone" placeholder="Phone Number">
@@ -21,7 +21,7 @@
         <input type="text" id="address" placeholder="Address">
 
         <label for="checkbox">
-	        <input type="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+	        <input type="checkbox" value="#checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 		</label>
         <label for="multiSelect">Please select your preferred breeds
         <select name="" id="multiSelect" multiple >
