--- a/main.html
+++ b/main.html
@@ -21,10 +21,10 @@
         <input type="text" id="address" placeholder="Address">
 
         <label for="checkbox">
-	        <input type="checkbox" value="#checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+	        <input type="#checkbox" value="#checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 		</label>
         <label for="multiSelect">Please select your preferred breeds
-        <select name="" id="multiSelect" multiple >
+        <select name="dogName" id="multiSelect" multiple >
             <option >German Shepherd</option>
             <option >Bull Dog</option>
             <option >chow chow</option>
