--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
         <label for="address">Address</label>
         <input type="text" id="address" placeholder="Address">
 
-        <label for="checkbox">
-	        <input type="#checkbox" value="#checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+        <label for="#checkbox">
+	        <input type="checkbox" value="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 		</label>
         <label for="multiSelect">Please select your preferred breeds
         <select name="dogName" id="multiSelect" multiple >
