--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         <label for="address">Address</label>
         <input type="text" id="address" placeholder="Address">
 
-        <label for="#checkbox">
+        <label for="checkbox">
 	        <input type="checkbox" value="checkbox"  id="checkbox" placeholder="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
 		</label>
         <label for="multiSelect">Please select your preferred breeds
